# coursework-5

./: .gitignore  README.md  db_manager.py  hhapiengine.py  main.py  pyproject.toml  utils.py
dbmanager/: db_config.py  db_manager.py  queries.sql
hhapi/: hh_api_config.py  hhapiengine.py
