[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = "Курсовая работа номер 5 по работе с базами данных"
authors = ["Egor Volkov <volkovqa96@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_5"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
